Rewrite and fix collapsing nav
All nav-collapsing code was moved to JavaScript with Web
Animations API. This fixes many bugs in its behavior, and
makes it less likely to break if more items are added.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,33 +61,11 @@ dl {
     position: absolute;
     top: 0; left: 0; right: 0;
     padding-inline: var(--page-padding);
-    overflow: visible;
+    overflow: hidden;
     z-index: 10;
-    max-height: 4em;
+    max-height: 3.9em;
     color: white;
 }
-    .site-header.expanded {
-        max-height: 80vh;
-    }
-
-    .site-header::before {
-        content: '';
-        display: block;
-        position: absolute;
-        z-index: -1;
-        top: 0; left: 0; right: 0;
-        background: black;
-        opacity: 0;
-        transition: transform 200ms ease-in-out, opacity 200ms ease-in-out;
-        height: max(100%, 6em);
-        transform: translateY(-50%);
-    }
-
-    .site-header.expanded::before {
-        opacity: 1;
-        transform: none;
-    }
-
     .site-header nav {
         display: flex;
         flex-flow: row nowrap;
@@ -99,14 +77,8 @@ dl {
             flex-flow: row wrap;
             gap: 1em;
 
-            max-height: 2em;
-            overflow: hidden;
-
             list-style: none;
         }
-            .site-header.expanded ul {
-                max-height: none;
-            }
 
         .site-header a:not(:hover, :focus) {
             text-decoration: none;
